--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-
+    <title>PULSE - Premium Headphones</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Headphone Product Landing Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header id="header">
-        <img id="header-img"
+        <!-- <div> -->
+        <a href="#hero" class="logo">PULSE
+            <!-- <img id="header-img"
             src="https://images.unsplash.com/photo-1484704849700-f032a568e944?ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
-            alt="PULSE Logo">
+            alt="PULSE Logo"> -->
+        </a>
+        <!-- </div> -->
         <nav id="nav-bar">
             <div class="hamburger">
                 <div class="line"></div>
@@ -23,137 +28,193 @@
             </div>
             <ul class="nav-links">
                 <li><a class="nav-link" href="#features">Features</a></li>
-                <li><a class="nav-link" href="#how-it-works">how-it-works</a></li>
+                <li><a class="nav-link" href="#specs">Specs</a></li>
                 <li><a class="nav-link" href="#pricing">Pricing</a></li>
                 <li><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="section">
-            <div class="hero-section container">
-                <div class="hero-content">
-                    <h1>Best & Smart Digital Product For You</h1>
-                    <p>Instant delivery digital goods purchased on online stores. Try for free and increase your sales
-                        with
-                        the
-                        automate.</p>
-                    <a href="#pricing" class="cta btn">Get Product</a>
-                </div>
-            </div>
-        </section>
-        <section class="feature-section container" id="features">
-            <h2>Outstanding Features</h2>
-            <div class="feature-container">
-                <div class="feature-banner">
-                    <img src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                        alt="feature image">
-                </div>
-                <div class="feature-content">
-                    <ul class="feature-list">
-                        <li class="feature-item">
-                            <div>
-                                <ion-icon name="megaphone"></ion-icon>
-                            </div>
-                            <div>
-                                <h3>Noise Cancelling</h3>
-                                <p>Our headphones are equipped with the latest noise cancelling technology that will
-                                    block
-                                    out all the noise around you.</p>
-                            </div>
-                        </li>
-                        <li class="feature-item">
-                            <div>
-                                <ion-icon name="bluetooth"></ion-icon>
-                            </div>
-                            <div>
-                                <h3>Wireless</h3>
-                                <p>Our headphones are wireless and can be connected to any device that supports
-                                    bluetooth
-                                    technology.</p>
-                            </div>
-                        </li>
-                        <li class="feature-item">
-                            <div>
-                                <ion-icon name="battery-charging"></ion-icon>
-                            </div>
-                            <div>
-                                <h3>Long Battery Life</h3>
-                                <p>Our headphones have a long battery life that will last you all day long.</p>
-                            </div>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section class="how-it-works-section container" id="how-it-works">
-            <div>
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/v6EjmbMgv80" frameborder="0"
-                    allowfullscreen></iframe>
-            </div>
-            <div>
-                <h2>How it works</h2>
-                <p>Our headphones are easy to use and can be connected to any device that supports bluetooth
-                    technology.Watch the video to see how it works.</p>
-        </section>
-        <section id="pricing" class="pricing-section container">
-            <h2>Choose Your Sony Headphone</h2>
-            <div class="pricing-container">
-                <div class="price-card">
-                    <h3>Sony X700</h3>
-                    <div class="price">$149</div>
-                    <ul>
-                        <li>30Hr Battery Life</li>
-                        <li>Bluetooth 5.0</li>
-                        <li>Basic Noise Cancellation</li>
-                        <li>1 Year Warranty</li>
-                    </ul>
-                    <button class="buy-button">Buy Now</button>
-                </div>
-                <div class="price-card featured">
-                    <div class="featured-tag">Most Popular</div>
-                    <h3>Sony X900</h3>
-                    <div class="price">$249</div>
-                    <ul>
-                        <li>40Hr Battery Life</li>
-                        <li>Bluetooth 5.2</li>
-                        <li>Advanced Noise Cancellation</li>
-                        <li>2 Year Warranty</li>
-                    </ul>
-                    <button class="buy-button">Buy Now</button>
-                </div>
-                <div class="price-card">
-                    <h3>Sony X900 Pro</h3>
-                    <div class="price">$349</div>
-                    <ul>
-                        <li>50Hr Battery Life</li>
-                        <li>Bluetooth 5.2</li>
-                        <li>Premium Noise Cancellation</li>
-                        <li>3 Year Warranty</li>
-                    </ul>
-                    <button class="buy-button">Buy Now</button>
-                </div>
-            </div>
-        </section>
 
-        <section id="contact" class="container">
-            <h2>Stay Updated</h2>
-            <p>Subscribe to our newsletter for exclusive offers and updates</p>
-            <form id="form" action="https://www.freecodecamp.com/email-submit">
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                <input type="submit" id="submit" value="Subscribe">
-            </form>
-        </section>
-    </main>
+    <section id="hero">
+        <div class="hero-content">
+            <h1>PULSE X900</h1>
+            <p>Experience sound like never before</p>
+            <a href="#pricing" class="cta-button">Shop Now</a>
+        </div>
+        <div class="hero-image">
+            <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                alt="PULSE X900 Headphones">
+        </div>
+    </section>
+
+    <section id="features">
+        <h2>Premium Features</h2>
+        <div class="features-container">
+            <div class="feature">
+                <i class="fas fa-wifi"></i>
+                <h3>Wireless Freedom</h3>
+                <p>Bluetooth 5.2 technology with 50ft range and seamless connectivity</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-battery-full"></i>
+                <h3>40Hr Battery</h3>
+                <p>Long-lasting battery life with quick charge technology</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-volume-up"></i>
+                <h3>Immersive Sound</h3>
+                <p>40mm dynamic drivers deliver crystal clear audio with deep bass</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="product-showcase">
+        <div class="product-image">
+            <img src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                alt="PULSE X900 Side View">
+        </div>
+        <div class="product-details">
+            <h2>Designed for Perfection</h2>
+            <p>The PULSE X900 combines premium materials with ergonomic design for ultimate comfort during extended
+                listening
+                sessions.</p>
+            <ul>
+                <li>Memory foam ear cushions</li>
+                <li>Adjustable headband</li>
+                <li>Lightweight construction</li>
+                <li>Foldable design for portability</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="specs">
+        <h2>Technical Specifications</h2>
+        <div class="specs-container">
+            <div class="spec">
+                <h3>Audio</h3>
+                <ul>
+                    <li>40mm Dynamic Drivers</li>
+                    <li>Frequency: 20Hz-20kHz</li>
+                    <li>Impedance: 32Ω</li>
+                    <li>Sensitivity: 105dB</li>
+                </ul>
+            </div>
+            <div class="spec">
+                <h3>Connectivity</h3>
+                <ul>
+                    <li>Bluetooth 5.2</li>
+                    <li>USB-C Charging</li>
+                    <li>3.5mm Aux Input</li>
+                    <li>Multi-device pairing</li>
+                </ul>
+            </div>
+            <div class="spec">
+                <h3>Battery</h3>
+                <ul>
+                    <li>40 Hours Playback</li>
+                    <li>Quick Charge (10min = 5hrs)</li>
+                    <li>Full Charge: 2 Hours</li>
+                    <li>Standby: 60 Days</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="pricing">
+        <h2>Choose Your PULSE</h2>
+        <div class="pricing-container">
+            <div class="price-card">
+                <h3>PULSE X700</h3>
+                <div class="price">$149</div>
+                <ul>
+                    <li>30Hr Battery Life</li>
+                    <li>Bluetooth 5.0</li>
+                    <li>Basic Noise Cancellation</li>
+                    <li>1 Year Warranty</li>
+                </ul>
+                <button class="buy-button">Buy Now</button>
+            </div>
+            <div class="price-card featured">
+                <div class="featured-tag">Most Popular</div>
+                <h3>PULSE X900</h3>
+                <div class="price">$249</div>
+                <ul>
+                    <li>40Hr Battery Life</li>
+                    <li>Bluetooth 5.2</li>
+                    <li>Advanced Noise Cancellation</li>
+                    <li>2 Year Warranty</li>
+                </ul>
+                <button class="buy-button">Buy Now</button>
+            </div>
+            <div class="price-card">
+                <h3>PULSE X900 Pro</h3>
+                <div class="price">$349</div>
+                <ul>
+                    <li>50Hr Battery Life</li>
+                    <li>Bluetooth 5.2</li>
+                    <li>Premium Noise Cancellation</li>
+                    <li>3 Year Warranty</li>
+                </ul>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Stay Updated</h2>
+        <p>Subscribe to our newsletter for exclusive offers and updates</p>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <input type="submit" id="submit" value="Subscribe">
+        </form>
+    </section>
 
     <footer>
-        <p>&copy; 2025 Headphone Product Landing Page All right reserved. Developed by <a
-                href="https://github.com/Codeur-Omniscient">Codeur-Omniscient</a></p>
+        <div class="footer-content">
+            <div class="footer-links">
+                <h4>Shop</h4>
+                <ul>
+                    <li><a href="#">Headphones</a></li>
+                    <li><a href="#">Earbuds</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li><a href="#">Gift Cards</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>Support</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Warranty</a></li>
+                    <li><a href="#">Manuals</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>Company</h4>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Connect</h4>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 PULSE Audio. All rights reserved. Developed by <a
+                    href="https://github.com/Codeur-Omniscient">Codeur-Omniscient</a></p>
+        </div>
     </footer>
 
-
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="script.js"></script>
-
 </body>
 
 </html>
